GH-3622 support for sh:shapesGraph
Signed-off-by: Håvard Ottestad <hmottestad@gmail.com>